--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,22 @@ Authors@R:
 Description: PKG_DESC.
 License: MIT + file LICENSE
 Imports: 
+    bs4Dash,
     config (>= 0.3.1),
     dplyr,
     DT,
+    ggplot2,
+    ggwaffle,
     golem (>= 0.4.0),
-    readxl,
+    purrr,
     shiny (>= 1.7.4),
-    tidyr
-Suggests: 
-    testthat (>= 3.0.0)
+    shinyjs,
+    shinyWidgets,
+    stringdist,
+    stringr,
+    tidyr,
+    tidyselect,
+    viridis
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
