--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,16 +5,21 @@ Authors@R:
     person("Ozayr", "Mohammed", , "ozayr.mohammed@nhs.net", role = c("cre", "aut"))
 Description: PKG_DESC.
 License: MIT + file LICENSE
+Depends: 
+    R (>= 2.10)
 Imports: 
     bs4Dash,
     config (>= 0.3.1),
     dplyr,
     DT,
+    forcats,
     ggplot2,
     ggwaffle,
     golem (>= 0.4.0),
+    gt,
+    janitor,
+    maps,
     pins,
-    pkgload,
     purrr,
     shiny (>= 1.7.4),
     shinyjs,
@@ -28,5 +33,3 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Depends: 
-    R (>= 2.10)
