--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,9 @@ Imports:
     tidyr,
     tidyselect,
     viridis
+Remotes:
+    liamgilbey/ggwaffle
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
